# markdown-to-feishu

./: .gitignore  MIGRATION.md  README.md  batch_import.py  config.example.json  convert_perfect.py  pyproject.toml  requirements.txt
apps/: README.md  markdown_to_feishu_doc.py
docs/: api_notes.md
docs/examples/: sample.md  simple_test.md
examples/: simple_message.py
mcp_server/: README.md  feishu_mcp_server.py  mcp_config_example.json
src/: __init__.py
src/core/: content_inserter.py  document_creator.py  markdown_converter.py
src/utils/: config.py
tests/: run_tests.py  test_config.py  test_content_inserter.py  test_document_creator.py  test_markdown_converter.py
